--- a/app/views/auto_builds/new.html.erb
+++ b/app/views/auto_builds/new.html.erb
@@ -15,7 +15,7 @@
       <table>
         <tr>
           <td><%= text_area_tag(:accession, "", :size => "50x10")%></td>
-          <td>One id per line<br>e.g.<br>NP_058651.3<br>YP_491843.1<br>P29929.1</td>
+          <td>One id per line<br />e.g.<br />NP_058651.3<br />YP_491843.1<br />P29929.1</td>
         </tr>
       </table>
     </div>
