--- a/app/views/auto_builds/new.html.erb
+++ b/app/views/auto_builds/new.html.erb
@@ -6,6 +6,7 @@
 
   <ul class="nav nav-tabs">
     <li class="active"><a href="#ncbi" data-toggle="tab">NCBI</a></li>
+    <li><a href="#genome" data-toggle="tab">Genome</a></li>
     <li><a href="#file" data-toggle="tab">Fasta File</a></li>
   </ul>
 
@@ -18,6 +19,14 @@
           <td>One id per line<br />e.g.<br />NP_058651.3<br />YP_491843.1<br />P29929.1</td>
         </tr>
       </table>
+    </div>
+
+    <div class="tab-pane" id="genome">
+      <p><b>Organism </b> <%= select_tag(:organism, options_for_select(@organisms), :include_blank => true) %></p>
+      <p><b>Chromosome </b> <%= select_tag(:chromosome, options_from_collection_for_select(@chromosomes, :id, :name), :include_blank => true) %></p>
+      <p><b>Features </b> <%= select_tag(:feature, options_for_select(@features), :include_blank => true) %></p>
+      <p><b>Strand </b> <%= select_tag(:strand, options_for_select(['+', '-', '+/-']), :include_blank => true)%>
+      <p><b>Start Position </b> <%= text_field_tag(:start) %> <b>End Position</b> <%= text_field_tag(:end) %></p>
     </div>
 
     <div class="tab-pane" id="file">
