--- a/app/views/designs/show.html.erb
+++ b/app/views/designs/show.html.erb
@@ -3,6 +3,10 @@
 </div>
 <h5>Design Standard: <%= @design.protocol.name %></h5>
 
+<% if !@design.comment.blank? %>
+  Comment: <%= @design.comment %>
+<% end %>
+
 <% @design.constructs.each do |construct| %>
   <b><%= construct.name %></b><br />
   <div id="construct">
