--- a/app/views/parts/confirm.html.erb
+++ b/app/views/parts/confirm.html.erb
@@ -21,7 +21,7 @@
 <% else %>
   <%= form_tag({:controller => "parts", :action => "create"}, :method => "post", :multipart => true) do %>
 
-    <% if !@sequences.nil? %>
+    <% if !@sequences.blank? %>
       <%= hidden_field_tag(:sequence_file, @seq_file) %>
       <p><b><%= @sequences.size %></b> parts to be created.  They are:</p>
       <hr />
@@ -42,7 +42,7 @@
         <% end %>
       </table>
 
-    <% elsif !@accessions.nil? %>
+    <% elsif !@accessions.blank? %>
       <p><b><%= @accessions.size %></b> parts to be created. They are:</p>
       <hr />
       <% @accessions.each do |entry| %>
@@ -51,7 +51,8 @@
       <% end %>
 
     <% else %>
-      <p>Your selection is: <%= @organism.fullname %>_<%= @chromosome.name %>, feature: <%= @feature.name %>, position: <%= @start %>-<%= @end %>, strand: <%= @strand %></p>
+      <p>The genome you select is: <%= @organism.fullname %>_<%= @chromosome.name %>, feature: <%= @feature.name %>, position: <%= @start %>-<%= @end %>, strand: <%= @strand %></p>
+      <%= hidden_field_tag(:genome, {chromosome_id: @chromosome.id, feature_id: @feature.id, strand: @strand, start: @start, end: @end}) %>
       <p><b><%= @parts.size %></b> parts are found to meet your requirements.  They are: </p>
       <table class="table table-striped">
         <tr>
