--- a/app/views/parts/show.html.erb
+++ b/app/views/parts/show.html.erb
@@ -9,13 +9,22 @@
 
 <div class="tab-content">
   <div class="tab-pane active" id="info">
-    <b>Name:</b> <%= @part.name %> 
-    <br /><br />
-    <b>Sequence:</b>
-    <div id="seq">
-      <%= @part.sequence.seq%>
-    </div>
-    </p>
+    <dl class="dl-horizontal">
+      <dt>Name</dt>
+      <dd><%= @part.name %></dd>
+      <dt>Length</dt>
+      <dd><%= @sequence.size %></dd>
+      <dt>GC content</dt>
+      <dd><%= @sequence.gc_percent().to_f %></dd>
+      <dt>GC skew</dt>
+      <dd><%= @sequence.gc_skew().to_f %></dd>
+      <% if !@part.comment.blank? %>
+        <dt>Comment</dt>
+        <dd><%= @part.comment %></dd>
+      <% end %>
+    </dl>
+    <pre class="prettyprint linenums"><%= @sequence.to_fasta(@part.name,80) %></pre>
+    <i class="icon-download-alt"> </i><%= link_to 'Download FASTA file', :action => :get_fasta_file, :id => @part.id %>
   </div>
 
   <div class="tab-pane" id="design">
