--- a/app/views/admin/protocols/index.html.erb
+++ b/app/views/admin/protocols/index.html.erb
@@ -28,5 +28,5 @@
   </tbody>
 </table>
 <div class='form-actions'>
-  <%= link_to 'New Design Standard', new_admin_protocol_path, :class => 'btn btn-primary' %>
+  <%= link_to 'Add Design Standard', new_admin_protocol_path, :class => 'btn' %>
 </div>
