--- a/app/views/parts/new.html.erb
+++ b/app/views/parts/new.html.erb
@@ -5,8 +5,8 @@
 
   <ul class="nav nav-tabs">
     <li class="active"><a href="#ncbi" data-toggle="tab">NCBI</a></li>
-    <li><a href="#genome" data-toggle="tab">Genome</a></li>
     <li><a href="#file" data-toggle="tab">Fasta File</a></li>
+    <li><a href="#genome" data-toggle="tab">Search Genome</a></li>
   </ul>
 
   <div class="tab-content">
@@ -20,14 +20,78 @@
           <td>One id per line<br />e.g.<br />NP_058651.3<br />YP_491843.1<br />P29929.1</td>
         </tr>
       </table>
+  <div class="form-actions">
+    <%= submit_tag("Create Parts", :class => "btn btn-primary") %>
+  </div>
     </div>
 
     <div class="tab-pane" id="genome">
-      <p><b>Organism </b> <%= select_tag(:organism, options_for_select(@organisms), :include_blank => true) %></p>
-      <p><b>Chromosome </b> <%= select_tag(:chromosome, options_from_collection_for_select(@chromosomes, :id, :name), :include_blank => true) %></p>
-      <p><b>Features </b> <%= select_tag(:feature, options_for_select(@features), :include_blank => true) %></p>
-      <p><b>Strand </b> <%= select_tag(:strand, options_for_select(['+', '-', '+/-']), :include_blank => true)%>
-      <p><b>Start Position </b> <%= text_field_tag(:start) %> <b>End Position</b> <%= text_field_tag(:end) %></p>
+      Your query: <%= text_field_tag(:genome) %> &nbsp;&nbsp;&nbsp; <%= submit_tag("Search", :class => "btn btn-primary") %>
+      <hr />
+      <p><b>Syntax Guide</b></p>
+      <p>You can input any words to search all the fields, or search a specific field using the format: field_name:words. 'AND', 'OR' can be used to combine diffrent fields to create complex queries.</p>
+      <p><b>Examples:</b></p>
+      <li>gene_name:SE* AND (chromosome:chrI OR chromosome:chrII) <i>(find all the genes whose gene symbol begins with SE and belongs to chromosome I or II)</i></li>
+      <li>start:[1 TO 10000] AND feature:CDS AND orf_classification:vefified <i>(find all the verified CDS with start position from 1 to 10000)</i></li>
+      <hr />
+      <p><b>Keywords</b></p>
+      <table class="table table-stripped table-bordered">
+        <tr>
+          <th>Keyword</th>
+          <th>Description</th>
+          <th>Query Example</th>
+        </tr>
+        <tr>
+          <td>systematic_name</td>
+          <td>The systematic name used in SGD database</td>
+          <td>systematic_name:YAL*</td>
+        </tr>
+        <tr>
+          <td>gene_name</td>
+          <td>Official gene symbol</td>
+          <td>gene_name:SEO1</td>
+        </tr>
+        <tr>
+          <td>chromosome</td>
+          <td>Chromosome name</td>
+          <td>chromosome:chrII</td>
+        </tr>
+        <tr>
+          <td>feature</td>
+          <td>Entity type, e.g. CDS, tRNA, telomere</td>
+          <td>feature:CDS</td>
+        </tr>
+        <tr>
+          <td>start</td>
+          <td>The start prosotion on chromosome</td>
+          <td>start:[1000 TO *]</td>
+        </tr>
+        <tr>
+          <td>end</td>
+          <td>The end prosotion on chromosome</td>
+          <td>end:7235</td>
+        </tr>
+        <tr>
+          <td>strand</td>
+          <td>strand, + or -</td>
+          <td>strand:-</td>
+        </tr>
+        <tr>
+          <td>orf_classification</td>
+          <td>ORF classification: verified, dubious, uncheracterized, ...</td>
+          <td>orf_classification:verified</td>
+        </tr>
+        <tr>
+          <td>ontology_term</td>
+          <td>ontology accession number</td>
+          <td>ontology_term:0008150</td>
+        </tr>
+        <tr>
+          <td>description</td>
+          <td>gene description</td>
+          <td>description:shock protein</td>
+        </tr>
+      </table>
     </div>
 
     <div class="tab-pane" id="file">
@@ -38,10 +102,10 @@
       <p><b>></b> part_name <b>|</b> part_type <b>|</b> accession_number <b>|</b> organism(optional)<b> | </b>comments(optional)</p> 
       <p>Only one description line is allowed for one sequence</p>
       <p> Check more details and examples: <%= link_to 'description', {:action => :get_description_file} %></p>
-    </div>
-  </div>
   <div class="form-actions">
     <%= submit_tag("Create Parts", :class => "btn btn-primary") %>
+  </div>
+    </div>
   </div>
 <% end %>
 
