--- a/app/views/parts/new.html.erb
+++ b/app/views/parts/new.html.erb
@@ -6,7 +6,7 @@
   <ul class="nav nav-tabs">
     <li class="active"><a href="#ncbi" data-toggle="tab">NCBI</a></li>
     <li><a href="#file" data-toggle="tab">Fasta File</a></li>
-    <li><a href="#genome" data-toggle="tab">Search Genome</a></li>
+    <li><a href="#genome" data-toggle="tab">Search Genomes</a></li>
   </ul>
 
   <div class="tab-content">
@@ -50,6 +50,11 @@
           <td>gene_name</td>
           <td>Official gene symbol</td>
           <td>gene_name:SEO1</td>
+        </tr>
+        <tr>
+          <td>organism</td>
+          <td>Organism latin name</td>
+          <td>organism:Saccharomyces cerevisiae</td>
         </tr>
         <tr>
           <td>chromosome</td>
