--- a/app/views/auto_builds/new.html.erb
+++ b/app/views/auto_builds/new.html.erb
@@ -6,8 +6,8 @@
 
   <ul class="nav nav-tabs">
     <li class="active"><a href="#ncbi" data-toggle="tab">NCBI</a></li>
-    <li><a href="#genome" data-toggle="tab">Genome</a></li>
     <li><a href="#file" data-toggle="tab">Fasta File</a></li>
+    <li><a href="#genome" data-toggle="tab">Search Genomes</a></li>
   </ul>
 
   <div class="tab-content">
@@ -22,11 +22,88 @@
     </div>
 
     <div class="tab-pane" id="genome">
-      <p><b>Organism </b> <%= select_tag(:organism, options_for_select(@organisms), :include_blank => true) %></p>
-      <p><b>Chromosome </b> <%= select_tag(:chromosome, options_from_collection_for_select(@chromosomes, :id, :name), :include_blank => true) %></p>
-      <p><b>Features </b> <%= select_tag(:feature, options_for_select(@features), :include_blank => true) %></p>
-      <p><b>Strand </b> <%= select_tag(:strand, options_for_select(['+', '-', '+/-']), :include_blank => true)%>
-      <p><b>Start Position </b> <%= text_field_tag(:start) %> <b>End Position</b> <%= text_field_tag(:end) %></p>
+      1. <b>Input your query</b> <%= text_field_tag(:genome) %>
+      <div class="accordion" id="accordion2">
+        <div class="accordion-group">
+          <div class="accordion-heading">
+            <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion2" href="#collapseOne">
+              Syntax Guide
+            </a>
+          </div>
+          <div id="collapseOne" class="accordion-body collapse">
+            <div class="accordion-inner">
+              <p>You can input any words to search all the fields, or search a specific field using the format: field_name:words. 'AND', 'OR' can be used to combine diffrent fields to create complex queries.</p>
+              <p><b>Examples:</b></p>
+              <li>gene_name:SE* AND (chromosome:chrI OR chromosome:chrII) <i>(find all the genes whose gene symbol begins with SE and belongs to chromosome I or II)</i></li>
+              <li>start:[1 TO 10000] AND feature:CDS AND orf_classification:vefified <i>(find all the verified CDS with start position from 1 to 10000)</i></li>
+              <hr />
+              <p><b>Keywords</b></p>
+              <table class="table table-stripped table-bordered">
+                <tr>
+                  <th>Keyword</th>
+                  <th>Description</th>
+                  <th>Query Example</th>
+                </tr>
+                <tr>
+                  <td>systematic_name</td>
+                  <td>The systematic name used in SGD database</td>
+                  <td>systematic_name:YAL*</td>
+                </tr>
+                <tr>
+                  <td>gene_name</td>
+                  <td>Official gene symbol</td>
+                  <td>gene_name:SEO1</td>
+                </tr>
+                <tr>
+                  <td>organism</td>
+                  <td>Organism latin name</td>
+                  <td>organism:Saccharomyces cerevisiae</td>
+                </tr>
+                <tr>
+                  <td>chromosome</td>
+                  <td>Chromosome name</td>
+                  <td>chromosome:chrII</td>
+                </tr>
+                <tr>
+                  <td>feature</td>
+                  <td>Entity type, e.g. CDS, tRNA, telomere</td>
+                  <td>feature:CDS</td>
+                </tr>
+                <tr>
+                  <td>start</td>
+                  <td>The start prosotion on chromosome</td>
+                  <td>start:[1000 TO *]</td>
+                </tr>
+                <tr>
+                  <td>end</td>
+                  <td>The end prosotion on chromosome</td>
+                  <td>end:7235</td>
+                </tr>
+                <tr>
+                  <td>strand</td>
+                  <td>strand, + or -</td>
+                  <td>strand:-</td>
+                </tr>
+                <tr>
+                  <td>orf_classification</td>
+                  <td>ORF classification: verified, dubious, uncheracterized, ...</td>
+                  <td>orf_classification:verified</td>
+                </tr>
+                <tr>
+                  <td>ontology_term</td>
+                  <td>ontology accession number</td>
+                  <td>ontology_term:0008150</td>
+                </tr>
+                <tr>
+                  <td>description</td>
+                  <td>gene description</td>
+                  <td>description:shock protein</td>
+                </tr>
+              </table>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
 
     <div class="tab-pane" id="file">
