change strand from + to W

--- a/app/views/auto_builds/new.html.erb
+++ b/app/views/auto_builds/new.html.erb
@@ -81,8 +81,8 @@
                 </tr>
                 <tr>
                   <td>strand</td>
-                  <td>strand, + or -</td>
-                  <td>strand:-</td>
+                  <td>strand, W or C (W: positive, C: negative)</td>
+                  <td>strand:W</td>
                 </tr>
                 <tr>
                   <td>orf_classification</td>
