show gene name in confirm page

--- a/app/views/auto_builds/confirm.html.erb
+++ b/app/views/auto_builds/confirm.html.erb
@@ -56,7 +56,8 @@
           <th></th>
           <th>Organism</th>
           <th>Chromosome</th>
-          <th>Part Name</th>
+          <th>Systematic Name</th>
+          <th>gene Name</th>
           <th>Part Type</th>
           <th>Strand</th>
           <th>Start</th>
@@ -71,6 +72,7 @@
             <td><%= p.organism %></td>
             <td><%= p.chromosome %></td>
             <td><%= p.systematic_name %></td>
+            <td><%= p.gene_name %></td>
             <td><%= p.feature %></td>
             <td><%= p.strand %></td>
             <td><%= p.start %></td>
