--- a/app/views/parts/confirm.html.erb
+++ b/app/views/parts/confirm.html.erb
@@ -65,7 +65,8 @@
           <th></th>
           <th>Organism</th>
           <th>Chromosome</th>
-          <th>Part Name</th>
+          <th>Systematic Name</th>
+          <th>Gene Name</th>
           <th>Part Type</th>
           <th>Strand</th>
           <th>Start</th>
@@ -80,6 +81,7 @@
             <td><%= p.organism %></td>
             <td><%= p.chromosome %></td>
             <td><%= p.systematic_name %></td>
+            <td><%= p.gene_name %></td>
             <td><%= p.feature %></td>
             <td><%= p.strand %></td>
             <td><%= p.start %></td>
